--- a/css/reveal.css
+++ b/css/reveal.css
@@ -8403,7 +8403,10 @@ label.panel-block {
 .reveal section img.no-shadow {
   box-shadow: 0 0 0 transparent; }
 
-.size-50 {
+.reveal.slides {
+  margin-top: -15px; }
+
+.size-20 {
   width: 20%;
   height: auto; }
 
@@ -8433,4 +8436,12 @@ label.panel-block {
     top: -0.5rem;
     left: -3rem; }
   .navbar-logo img {
-    max-height: 3.5rem; } }
+    max-height: 3.5rem; }
+  .size-50 {
+    position: relative; }
+  .progress, .controls-arrow {
+    position: relative;
+    bottom: 10rem !important;
+    color: #814e73 !important; }
+  .controls-arrow {
+    bottom: 10.5rem !important; } }
