--- a/lib/css/zenburn.css
+++ b/lib/css/zenburn.css
@@ -10,7 +10,7 @@ based on dark.css by Ivan Sagalaev
   overflow-x: auto;
   padding: 0.5em;
   background: #3f3f3f;
-  color: #dcdcdc;
+  color: #efdcbc;
 }
 
 .hljs-keyword,
