--- a/css/reveal.scss
+++ b/css/reveal.scss
@@ -66,6 +66,10 @@ $mauve: #814e73;
 $primary: $beige;
 $link: $mauve;
 
+$table-background-color: none;
+$table-cell-border-width: 0 0 1px;
+$table-color: $beige;
+
 /*********************************************
  * BULMA IMPORT
  *********************************************/
@@ -1734,7 +1738,7 @@ $controlsArrowAngleActive: 36deg;
 /*********************************************
  * CUSTOM STYLES
  *********************************************/
-.navbar-height {
+ .navbar-height {
 	min-height: 5rem;
 }
 
@@ -1757,19 +1761,45 @@ $controlsArrowAngleActive: 36deg;
 }
 
 .reveal section img.no-border {
-	border: 0;
+	border: none !important;
 }
 
 .reveal section img.no-shadow {
 	box-shadow: 0 0 0 rgba(0, 0, 0, 0);
 }
 
-.reveal.slides {
-	margin-top: -15px;
+.reveal table {
+	width: 960px;
+	max-height: 400px;
+}
+
+.reveal table td {
+	text-align: center !important;
+	vertical-align: middle;
+	border: none !important;
+	width: 200px;
+	height: 195px;
+}
+
+.reveal table td img {
+	width: 200px;
+	height: 195px;
+}
+
+.reveal table td.caption {
+	position: relative;
+	top: -50px;
+	vertical-align: top !important;
+	padding: 0 20px 0 20px;
 }
 
 .size-20 {
 	width: 20%;
+	height: auto;
+}
+
+.size-50 {
+	width: 50%;
 	height: auto;
 }
 
