--- a/css/reveal.scss
+++ b/css/reveal.scss
@@ -1788,9 +1788,10 @@ $controlsArrowAngleActive: 36deg;
 
 .reveal table td.caption {
 	position: relative;
-	top: -50px;
+	top: -40px;
 	vertical-align: top !important;
 	padding: 0 20px 0 20px;
+	line-height: 1.5rem !important;
 }
 
 .size-20 {
