--- a/css/reveal.css
+++ b/css/reveal.css
@@ -8394,6 +8394,9 @@ label.panel-block {
 .reveal {
   position: inherit; }
 
+.reveal section {
+  margin-top: 3rem; }
+
 .reveal section img.no-bg {
   background: none; }
 
@@ -8405,7 +8408,7 @@ label.panel-block {
 
 .reveal table {
   width: 960px;
-  max-height: 400px; }
+  height: 400px; }
 
 .reveal table td {
   text-align: center !important;
@@ -8425,13 +8428,137 @@ label.panel-block {
   padding: 0 20px 0 20px;
   line-height: 1.5rem !important; }
 
+.size-10 {
+  width: 10%;
+  height: auto; }
+
+.size-15 {
+  width: 15%;
+  height: auto; }
+
 .size-20 {
   width: 20%;
+  height: auto; }
+
+.size-30 {
+  width: 30%;
   height: auto; }
 
 .size-50 {
   width: 50%;
   height: auto; }
+
+.size-120 {
+  width: 120%;
+  height: auto; }
+
+.ai-description {
+  width: 95vw;
+  height: 600px; }
+
+.bounding-box {
+  position: absolute;
+  width: 720px;
+  height: 600px;
+  left: 10vw;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-flow: column;
+      flex-flow: column; }
+
+.outer-circle {
+  width: 600px;
+  height: 600px;
+  margin: 0 auto !important;
+  border: 10px solid #55c7d0 !important;
+  border-radius: 50%; }
+
+.middle-circle {
+  -ms-flex-item-align: center;
+      align-self: center;
+  position: inherit;
+  bottom: 0;
+  width: 450px;
+  height: 450px;
+  border: 10px solid #08b08a !important;
+  border-radius: 50%;
+  z-index: 2; }
+
+.inner-circle {
+  -ms-flex-item-align: center;
+      align-self: center;
+  position: inherit;
+  bottom: 0;
+  width: 300px;
+  height: 300px;
+  border: 10px solid #fe8c69 !important;
+  border-radius: 50%;
+  z-index: 4; }
+
+.ai, .ml, .dl {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-flow: column;
+      flex-flow: column;
+  -ms-flex-align: center;
+      align-items: center; }
+
+.ai-img {
+  -ms-flex-pack: space-evenly;
+      justify-content: space-evenly; }
+
+.line-right {
+  width: 150px;
+  height: 5px;
+  position: absolute;
+  background-color: #f5f5f5;
+  left: 90%;
+  bottom: 0; }
+
+.line-left {
+  width: 150px;
+  height: 5px;
+  position: absolute;
+  background-color: #f5f5f5;
+  right: 90%;
+  bottom: 0; }
+
+.line-right-long {
+  width: 180px;
+  height: 5px;
+  position: absolute;
+  background-color: #f5f5f5;
+  left: 90%;
+  bottom: 0; }
+
+.ai-text {
+  width: 350px;
+  height: 60px;
+  line-height: 1.5rem !important;
+  position: absolute;
+  z-index: 6;
+  left: -15%;
+  text-align: left; }
+
+.ml-text {
+  width: 350px;
+  height: 60px;
+  line-height: 1.5rem !important;
+  position: absolute;
+  z-index: 8;
+  top: 300px;
+  right: -22%;
+  text-align: right; }
+
+.dl-text {
+  width: 350px;
+  height: 60px;
+  line-height: 1.5rem !important;
+  position: absolute;
+  z-index: 10;
+  top: 500px;
+  left: -15%;
+  text-align: left; }
 
 .progress, .controls-arrow {
   position: relative;
