--- a/css/reveal.scss
+++ b/css/reveal.scss
@@ -1828,6 +1828,14 @@ $controlsArrowAngleActive: 36deg;
 	height: auto;
 }
 
+.in-place {
+	position: inherit;
+	left: 0;
+	z-index: 14;
+	width: 100%;
+	height: auto;
+}
+
 .ai-description {
 	width: 95vw;
 	height: 600px;
