--- a/css/reveal.css
+++ b/css/reveal.css
@@ -8395,7 +8395,8 @@ label.panel-block {
   position: inherit; }
 
 .reveal section {
-  margin-top: 3rem; }
+  margin-top: 3rem;
+  line-height: 1.8rem !important; }
 
 .reveal section img.no-bg {
   background: none; }
@@ -8446,6 +8447,14 @@ label.panel-block {
 
 .size-50 {
   width: 50%;
+  height: auto; }
+
+.size-70 {
+  width: 70%;
+  height: auto; }
+
+.size-100 {
+  width: 100%;
   height: auto; }
 
 .size-120 {
@@ -8569,7 +8578,7 @@ label.panel-block {
 
 .move-up {
   position: relative;
-  top: -120px; }
+  top: -10vh; }
 
 .pc-task {
   position: relative; }
