--- a/css/reveal.scss
+++ b/css/reveal.scss
@@ -2069,6 +2069,10 @@ $controlsArrowAngleActive: 36deg;
 	justify-content: space-between;
 }
 
+.no-bullets {
+	list-style-type: none;
+}
+
 .progress, .controls-arrow {
 	position: relative;
 	bottom: 2.5rem !important;
