Remove Duplicate Slide

--- a/css/reveal.scss
+++ b/css/reveal.scss
@@ -1761,6 +1761,10 @@ $controlsArrowAngleActive: 36deg;
 	line-height: 1.8rem !important;
 }
 
+.reveal li, .reveal td {
+	line-height: 3rem !important;
+}
+
 .reveal section img.no-bg {
 	background: none;
 }
